--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fc69bd">  <td>20/06/24 22:33:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.SetUp()[pri:0, instance:com.test.testRunner.TestRunner@7b02881e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@773662650</td>   <td></td> </tr>
-<tr bgcolor="b5bebf">  <td>20/06/24 22:33:36</td>   <td>10042</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.test.testRunner.TestRunner@7b02881e]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@773662650</td>   <td></td> </tr>
-<tr bgcolor="b5bebf">  <td>20/06/24 22:33:36</td>   <td>10350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.test.testRunner.TestRunner@7b02881e]">feature</td> 
-  <td>main@773662650</td>   <td></td> </tr>
-<tr bgcolor="b5bebf">  <td>20/06/24 22:33:46</td>   <td>19538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.test.testRunner.TestRunner@7b02881e]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@773662650</td>   <td></td> </tr>
-<tr bgcolor="fc69bd">  <td>20/06/24 22:33:46</td>   <td>19566</td> <td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDown()[pri:0, instance:com.test.testRunner.TestRunner@7b02881e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@773662650</td>   <td></td> </tr>
+<tr bgcolor="979589">  <td>20/07/03 22:29:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestRunner.SetUp()[pri:0, instance:com.test.testRunner.TestRunner@7a675056]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>20/07/03 22:29:33</td>   <td>11596</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.test.testRunner.TestRunner@7a675056]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>20/07/03 22:29:34</td>   <td>12193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.test.testRunner.TestRunner@7a675056]">feature</td> 
+  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>20/07/03 22:29:43</td>   <td>21826</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.test.testRunner.TestRunner@7a675056]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
+<tr bgcolor="979589">  <td>20/07/03 22:29:43</td>   <td>21864</td> <td>&nbsp;</td><td title="&lt;&lt;TestRunner.tearDown()[pri:0, instance:com.test.testRunner.TestRunner@7a675056]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@355115154</td>   <td></td> </tr>
 </table>
